--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -15,8 +15,8 @@
                   </tr>
                   <tr>
                     <td class="bio-label"><span class="label">Race:</span></td>
-                    <td colspan="2">
-                      <input type="text" name="system.race" value="{{ system.race }}" />
+                    <td colspan="2" >
+                      <input style="text-transform:captialize" type="text" name="system.race" value="{{ system.race }}" />
                     </td>
                   </tr>
                   <tr>
@@ -43,29 +43,6 @@
                         class="modify"
                         placeholder="modify"
                         type="number"
-                      />
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <img
-                        title="Carry Load"
-                        style="width: 60px; height: 60px; border: none; margin: 0px; padding: 0px"
-                        src="/systems/arcane-arcade-fallout/assets/vaultboy/load-icon.png"
-                      />
-                    </td>
-                    <td style="vertical-align: middle" class="statusnum">
-                      <input
-                        type="number"
-                        name="system.carryLoad.value"
-                        value="{{ system.carryLoad.value }}"
-                      />
-                      /
-                      <input
-                        class="statusnum"
-                        type="number"
-                        name="system.carryLoad.max"
-                        value="{{ system.carryLoad.max }}"
                       />
                     </td>
                   </tr>
@@ -186,73 +163,11 @@
                     <td>
                       <table>
                         <tr>
-                          <td class="profile-image-td">
+                          <td class="profile-image-td" style="padding:10px;padding-top:0px;">
                             <img src="{{ actor.img }}" data-edit="img" title="{{ actor.name }}" />
                           </td>
                         </tr>
                         <tr>
-                          <td>
-                            <table class="current-caps">
-                              <tr>
-                                <td>
-                                  <img
-                                    title="Bottlecaps"
-                                    style="border: none"
-                                    class="custom-icon"
-                                    src="/systems/arcane-arcade-fallout/assets/caps.webp"
-                                  />
-                                </td>
-                                <td>
-                                  <input
-                                    id="caps"
-                                    type="number"
-                                    name="system.caps"
-                                    value="{{ system.caps }}"
-                                  />
-                                </td>
-                                <td>
-                                  <input
-                                    id="modifycaps"
-                                    class="modify"
-                                    onchange="updatecaps(this.value)"
-                                    value=""
-                                    placeholder="modify"
-                                    type="number"
-                                  />
-                                </td>
-                              </tr>
-                            </table>
-                            <table class="current-caps">
-                              <tr>
-                                <td colspan="999" style="vertical-align: middle">
-                                  <img
-                                    title="Karma Caps"
-                                    style="border: none"
-                                    class="custom-icon"
-                                    src="/systems/arcane-arcade-fallout/assets/KarmaCap.png"
-                                  />
-                                  <input
-                                    id="caps"
-                                    class="karma"
-                                    type="number"
-                                    name="system.karmaCaps.value"
-                                    value="{{ system.karmaCaps.value }}"
-                                    min="0"
-                                    max="{{ system.karmaCaps.max }}"
-                                  />
-                                  /
-                                  <input
-                                    id="caps"
-                                    class="karma"
-                                    type="number"
-                                    name="system.karmaCaps.max"
-                                    value="{{ system.karmaCaps.max }}"
-                                    min="0"
-                                  />
-                                </td>
-                              </tr>
-                            </table>
-                          </td>
                         </tr>
                       </table>
                     </td>
@@ -269,11 +184,7 @@
     <nav class="sheet-tabs tabs" data-group="primary">
       {{!-- Default tab is specified in actor-sheet.mjs --}}
       <a class="item" data-tab="status">STATUS</a>
-      <a class="item" data-tab="perks">PERKS</a>
       <a class="item" data-tab="items">COMBAT</a>
-      <a class="item" data-tab="medicine">AID</a>
-      <a class="item" data-tab="backpack">BACKPACK</a>
-      <a class="item" data-tab="effects">EFFECTS</a>
     </nav>
 
     {{!-- Sheet Body --}}
